tests/object_freeze2/object_freeze2.exp
Error ------------------------------------------------------------------------------------------------ downstream.js:4:1

Cannot cast `o.a` to number because frozen object literal [1] is incompatible with number [2]. [incompatible-type]

   downstream.js:4:1
   4| o.a as number;
      ^^^

References:
   nested_frozen_object.js:2:20
                         v
   2|   a: Object.freeze({
   3|     b: 'c',
   4|   }),
        ^ [1]
   downstream.js:4:8
   4| o.a as number;
             ^^^^^^ [2]



Found 1 error
